# facturacion_mx

./: README.md  pyproject.toml
.github/workflows/: ci.yml
facturacion_mx/: hooks.py  modules.txt  temporal_packed_items.json
facturacion_mx/facturacion_mx/: api.py
facturacion_mx/facturacion_mx/custom/: packed_item.json  sales_invoice.json  sales_invoice_item.json
facturacion_mx/facturacion_mx/doctype/cancelacion_factura/: api.py  cancelacion_factura.js  cancelacion_factura.json  cancelacion_factura.py  test_cancelacion_factura.py
facturacion_mx/facturacion_mx/doctype/clave_producto_o_servicio/: clave_producto_o_servicio.js  clave_producto_o_servicio.json  clave_producto_o_servicio.py  test_clave_producto_o_servicio.py
facturacion_mx/facturacion_mx/doctype/factura/: api.py  factura.js  factura.json  factura.py  test_factura.py
facturacion_mx/facturacion_mx/doctype/factura_global/: factura_global.js  factura_global.json  factura_global.py  test_factura_global.py
facturacion_mx/facturacion_mx/doctype/factura_responses/: factura_responses.json  factura_responses.py
facturacion_mx/facturacion_mx/doctype/facturacion_mx_settings/: facturacion_mx_settings.js  facturacion_mx_settings.json  facturacion_mx_settings.py  test_facturacion_mx_settings.py
facturacion_mx/facturacion_mx/doctype/forma_de_pago/: forma_de_pago.js  (+3 more)
facturacion_mx/fixtures/: custom_field.json  forma_de_pago.json  meses_y_bimestres_sat.json  mode_of_payment.json  motivo_de_cancelacion.json  periodicidad_sat.json  tax_category.json  uom.json  uom_conversion_factor.json  uso_cfdi.json
(+26 files in other folders)
